Aligned time start and endpoints correctly

--- a/src/client/rooms/PrivateRoom.less
+++ b/src/client/rooms/PrivateRoom.less
@@ -13,14 +13,19 @@
     font-weight: 600;
    
 }
-
+.progress-bar-container{
+    display: flex;
+    justify-content: flex-end;
+}
 .start-time{
-    display:relative;
+    display:inline ;
+    align-self: center;
 }
 
 .end-time{
     display: relative;
     float: right;
+    align-self: center;
 }
 
 .progress{
@@ -32,6 +37,8 @@
     background: rgba(125, 114, 116, 30%);
     border-radius: 7.5px;
     margin-right: 5%;
+    margin-left: 5%;
+    align-self: center;
 }
 
 .progress-bar{
@@ -39,4 +46,5 @@
     vertical-align: top;
     background: #756A9F;
     border-radius: 7.5px;
+   
 }
